# prediction-market-lab

./: .gitignore  README.md  clients.py  initialise.py  keys.py  pyproject.toml  requirements.txt
src/prediction_market_lab/cli/: brier_score.py  interactive.py  main.py  sync_candles.py  sync_markets.py
src/prediction_market_lab/client/: clients.py  keys.py
src/prediction_market_lab/db/: database.py
